--- a/app/frontend/ghost/content/themes/nuevo/default.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/default.hbs
@@ -80,7 +80,7 @@
 			$link.addClass('tweet-this');
 
 			$(this).wrap($link);
-		    $(this).append("<a style='float:right;font-style:normal;'>Click to Tweet</a>");
+		    $(this).append("<span style='float:right;font-style:normal;'>Click to Tweet</span>");
 
 		});
 	</script>
