added sumome and first blog post

--- a/app/frontend/ghost/content/themes/nuevo/default.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/default.hbs
@@ -28,6 +28,10 @@
 <link rel="stylesheet" type="text/css" href="{{asset "js/fancybox/jquery.fancybox.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "js/fancybox/helpers/jquery.fancybox-buttons.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/prettify-bootstrap.css"}}">
+
+<script src="//load.sumome.com/" data-sumo-site-id="4c2677cd45a898f7f323f0e31e33d3642ece7be678d3a895a98a3b01b6892282" async="async"></script>
+<style> .sumome-control, .sumome-popup-link { display: none !important; } </style>
+
 <!--[if lt IE 9]>
 <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
