--- a/app/frontend/ghost/content/themes/nuevo/partials/navigation.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/partials/navigation.hbs
@@ -2,10 +2,10 @@
 <nav class="main-nav" role="navigation">
   <ul>
 	  {{#foreach navigation}}
-	    <li class="nav-{{slug}}"><a href="{{url absolute="true"}}">{{#if current}}{{else}}{{label}}{{/if}}</a></li>
+	    <li class="nav-{{slug}}"><a href="{{url absolute="true"}}" style="float:left; padding-top:3px;">{{#if current}}{{else}}{{label}}{{/if}}</a></li>
 	  {{/foreach}}
-    <li>Get Startup Community Lessons via Email ->
-    <input type="email" class="email-input form-control" style="width: 20%; -moz-border-radius: 0px; -webkit-border-radius: 0px; border-radius: 0px; line-height: 1.428571429; height: 10px;" placeholder="your@emailaddress.com">
+    <li>Get Startup Community Lessons via Email:
+    <input type="email" class="email-input form-control" style="width: 160px; padding-left: 10px; -moz-border-radius: 0px; -webkit-border-radius: 0px; border-radius: 0px; line-height: 1.428571429; height: 10px;" placeholder="your@emailaddress.com">
     <button type="submit" class="btn btn-primary">Subscribe Now</button>
     </li>
   </ul>
