--- a/app/frontend/ghost/content/themes/nuevo/partials/navigation.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/partials/navigation.hbs
@@ -4,11 +4,22 @@
 	  {{#foreach navigation}}
 	    <li class="nav-{{slug}}"><a href="{{url absolute="true"}}" style="float:left; padding-top:3px;">{{#if current}}{{else}}{{label}}{{/if}}</a></li>
 	  {{/foreach}}
-    <li>Get Startup Community Lessons via Email:
-    <input type="email" class="email-input form-control" style="width: 160px; padding-left: 10px; -moz-border-radius: 0px; -webkit-border-radius: 0px; border-radius: 0px; line-height: 1.428571429; height: 10px;" placeholder="your@emailaddress.com">
-    <button type="submit" class="btn btn-primary">Subscribe Now</button>
-    </li>
+    <li>Get Startup Community Lessons Delivered To Your Inbox:</li>
+
+	    <li>
+	    </li>
+
   </ul>
+  <form action="//startupcommunity.us9.list-manage.com/subscribe/post-json?u=e84a98eb12e090eb0b1a06b80&amp;id=ba6c99c719&amp;c=?" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+
+
+
+        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+
+      <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+
+  </form>
+  <div id="notification_container"></div>
 </nav>
 <!-- end: .main-nav -->
 <div class="mobile selector"><i class="fa fa-bars"></i></div>
