email field working

--- a/app/frontend/ghost/content/themes/nuevo/assets/css/style.css
+++ b/app/frontend/ghost/content/themes/nuevo/assets/css/style.css
@@ -109,54 +109,8 @@ blockquote span:after {
 
 nav.mobile ul li { color: #fff; display: inline-block !important;}
 
-#notification_container {
-    display: block;
-    margin: 0 auto;
-}
+#header nav { padding-top: 0 !important;}
 
-#notification_container .alert {
-    display: block;
-    width: 100%;
-    padding: 11px 20px;
-    border: 1px solid #cfc07e;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    color: #515151;
-    font-size: 1.1em;
-    line-height: 1.3em;
-    font-weight: bold;
-    text-shadow: 1px 1px 0 rgba(255,255,255,0.75);
-    background-color: #e3cb77;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#e3cb77), to(#f4e4a8));
-    background-image: -webkit-linear-gradient(top, #e3cb77, #f4e4a8);
-    background-image: -moz-linear-gradient(top, #e3cb77, #f4e4a8);
-    background-image: -ms-linear-gradient(top, #e3cb77, #f4e4a8);
-    background-image: -o-linear-gradient(top, #e3cb77, #f4e4a8);
-    background-image: linear-gradient(top, #e3cb77, #f4e4a8);
-}
-
-#notification_container .success {
-    display: block;
-    width: 100%;
-    padding: 11px 20px;
-    border: 1px solid #78aa5f;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    color: #515151;
-    font-size: 1.1em;
-    line-height: 1.3em;
-    font-weight: bold;
-    text-shadow: 1px 1px 0 rgba(255,255,255,0.5);
-    background-color: #9ac784;
-    background-image: -webkit-gradient(linear, left top, left bottom, from(#9ac784), to(#aed39c));
-    background-image: -webkit-linear-gradient(top, #9ac784, #aed39c);
-    background-image: -moz-linear-gradient(top, #9ac784, #aed39c);
-    background-image: -ms-linear-gradient(top, #9ac784, #aed39c);
-    background-image: -o-linear-gradient(top, #9ac784, #aed39c);
-    background-image: linear-gradient(top, #9ac784, #aed39c);
-}
 
 /* END CUSTOM CSS */
 
