--- a/app/frontend/ghost/content/themes/nuevo/partials/footer.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/partials/footer.hbs
@@ -1,7 +1,7 @@
 <!-- start: #footer -->
 <footer id="footer">
 	<div class="center">
-		That's all!
+		Blog powered by Ghost <img src="/blog/content/images/2015/05/ghost.jpg"/>
 	</div>
 </footer>
 <!-- end: #footer -->
