--- a/app/frontend/ghost/content/themes/nuevo/default.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/default.hbs
@@ -18,7 +18,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 {{! Styles'n'Scripts }}
-<link rel="shortcut icon" href="{{asset "favicon.ico"}}">
+<link rel="icon" type="image/png" href="../../../../../../public/favicon.png">
 <link rel="stylesheet" type="text/css" href="{{asset "css/animate.min.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/font-awesome.min.css"}}">
 <link rel="stylesheet" type="text/css" href="{{asset "css/style.css"}}">
