--- a/app/frontend/ghost/content/themes/nuevo/post.hbs
+++ b/app/frontend/ghost/content/themes/nuevo/post.hbs
@@ -21,7 +21,7 @@
 					{{#if image}}
 						<div class="main-image"><img src="{{image}}"></div>
 					{{/if}}
-					<h2>{{title}}</h2>
+					<h2 id="post-title">{{title}}</h2>
 				</header>
 				
 				<section class="post-content">
