--- a/app/views/network.html
+++ b/app/views/network.html
@@ -1,7 +1,7 @@
 <div ng-controller="PeopleController">
   <!-- Dashboard Header -->
   <!-- For an image header add the class 'content-header-media' and an image as in the following example -->
-  <div class="content-header content-header-media beta0">
+  <div class="content-header content-header-media">
     <div class="header-section">
       <div class="row">
         <!-- Main Title (hidden on small devices for the statistics to fit) -->
