fixed load screen artifacts

--- a/app/assets/less/layout.less
+++ b/app/assets/less/layout.less
@@ -1,6 +1,10 @@
 // The Theme Layout
 // --------------------------------------------------
 
+/* Custom */
+
+.start-hidden { display: block !important;}
+
 /* Containers */
 body {
 	padding-top: @navbar-height;
